remove semantic endpoint and add full_address column to address get
